--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           node-version: '12.x'
       - run: |
-          yarn --registry=https://registry.npm.taobao.org
-          yarn build
+          # yarn --registry=https://registry.npm.taobao.org
+          npm run build
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{secrets.BLOG_GITHUB_TOKEN}}
