--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: '12.x'
       - run: |
+          npm install
           npm run build
       - uses: peaceiris/actions-gh-pages@v3
         with:
