--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^1.8.2",
-    "cz-conventional-changelog": "^3.3.0"
+    "@vuepress/plugin-nprogress": "^1.8.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "vuepress": "^1.8.2"
   },
   "config": {
     "commitizen": {
